--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Bilinməyən xəta baş verdi</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">\"%1$s\" faylı artıq mövcuddur</string>
-    <string name="file_already_exists_overwrite">\"%1$s\" faylı artıq mövcuddur. Üzərinə yazılsın?</string>
-    <string name="folder_already_exists">\"%1$s\" qovluğu artıq mövcuddur</string>
+    <string name="file_already_exists">\"%s\" faylı artıq mövcuddur</string>
+    <string name="file_already_exists_overwrite">\"%s\" faylı artıq mövcuddur. Üzərinə yazılsın?</string>
+    <string name="folder_already_exists">\"%s\" qovluğu artıq mövcuddur</string>
     <string name="merge">Birləşdir</string>
     <string name="overwrite">Üzərinə yaz</string>
     <string name="skip">Keç</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">Follow us</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="app_version">App version: %s</string>
+    <string name="device_os">Device OS: %s</string>
     <string name="donate_please">
         <![CDATA[
             Hello,<br><br>
