--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Der opstod en ukendt fejl</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">Filen \"%1$s\" findes allerede</string>
-    <string name="file_already_exists_overwrite">Filen \"%1$s\" findes allerede. Overskriv?</string>
-    <string name="folder_already_exists">Mappen \"%1$s\" findes allerede</string>
+    <string name="file_already_exists">Filen \"%s\" findes allerede</string>
+    <string name="file_already_exists_overwrite">Filen \"%s\" findes allerede. Overskriv?</string>
+    <string name="folder_already_exists">Mappen \"%s\" findes allerede</string>
     <string name="merge">Sammenflet</string>
     <string name="overwrite">Overskriv</string>
     <string name="skip">Skip</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">Følg os</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Yderligere info</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="app_version">App version: %s</string>
+    <string name="device_os">Device OS: %s</string>
     <string name="donate_please">
         <![CDATA[
             Hej,<br><br>
