--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Terjadi Kesalahan Tidak Di Ketahui</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">File \"%1$s\" Sudah Ada</string>
-    <string name="file_already_exists_overwrite">File \"%1$s\" Sudah Ada. Timpa saja?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" Sudah Ada</string>
+    <string name="file_already_exists">File \"%s\" Sudah Ada</string>
+    <string name="file_already_exists_overwrite">File \"%s\" Sudah Ada. Timpa saja?</string>
+    <string name="folder_already_exists">Folder \"%s\" Sudah Ada</string>
     <string name="merge">Gabung</string>
     <string name="overwrite">Timpa</string>
     <string name="skip">Lewati</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">Follow us</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Tambahan info</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="app_version">App version: %s</string>
+    <string name="device_os">Device OS: %s</string>
     <string name="donate_please">
         <![CDATA[
             Hello,<br><br>
