--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">알 수 없는 에러가 발생함</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">\"%1$s\" 파일이 이미 존재합니다.</string>
-    <string name="file_already_exists_overwrite">\"%1$s\" 파일이 이미 존재합니다. 덮어쓰시겠습니까?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="file_already_exists">\"%s\" 파일이 이미 존재합니다.</string>
+    <string name="file_already_exists_overwrite">\"%s\" 파일이 이미 존재합니다. 덮어쓰시겠습니까?</string>
+    <string name="folder_already_exists">Folder \"%s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">덮어쓰기</string>
     <string name="skip">건너뛰기</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">Follow us</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="app_version">App version: %s</string>
+    <string name="device_os">Device OS: %s</string>
     <string name="donate_please">
         <![CDATA[
             안녕하세요.<br>
