--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Произошла неизвестная ошибка</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">Файл «%1$s» уже существует</string>
-    <string name="file_already_exists_overwrite">Файл «%1$s» уже существует. Перезаписать?</string>
-    <string name="folder_already_exists">Папка «%1$s» уже существует</string>
+    <string name="file_already_exists">Файл «%s» уже существует</string>
+    <string name="file_already_exists_overwrite">Файл «%s» уже существует. Перезаписать?</string>
+    <string name="folder_already_exists">Папка «%s» уже существует</string>
     <string name="merge">Объединить</string>
     <string name="overwrite">Перезаписать</string>
     <string name="skip">Пропустить</string>
@@ -335,8 +335,8 @@
     <string name="follow_us">Подписаться на нас</string>
     <string name="copyright">v %1$s\nАвторские права © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Дополнительная информация</string>
-    <string name="app_version">Версия приложения: %1$s</string>
-    <string name="device_os">ОС устройства: %1$s</string>
+    <string name="app_version">Версия приложения: %s</string>
+    <string name="device_os">ОС устройства: %s</string>
     <string name="donate_please">
         <![CDATA[
             Привет,<br><br>
