--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Došlo k neznámej chybe</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">Súbor \"%1$s\" už existuje</string>
-    <string name="file_already_exists_overwrite">Súbor \"%1$s\" už existuje. Prepísať?</string>
-    <string name="folder_already_exists">Priečinok \"%1$s\" už existuje</string>
+    <string name="file_already_exists">Súbor \"%s\" už existuje</string>
+    <string name="file_already_exists_overwrite">Súbor \"%s\" už existuje. Prepísať?</string>
+    <string name="folder_already_exists">Priečinok \"%s\" už existuje</string>
     <string name="merge">Zlúčiť</string>
     <string name="overwrite">Prepísať</string>
     <string name="skip">Preskočiť</string>
@@ -338,8 +338,8 @@
     <string name="follow_us">Sledujte nás</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Dodatočné informácie</string>
-    <string name="app_version">Verzia aplikácie: %1$s</string>
-    <string name="device_os">Operačný systém zariadenia: %1$s</string>
+    <string name="app_version">Verzia aplikácie: %s</string>
+    <string name="device_os">Operačný systém zariadenia: %s</string>
     <string name="donate_please">
         <![CDATA[
             Zdravím,<br><br>
