--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">Bilinmeyen bir hata oluştu</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">\"%1$s\" dosyası zaten var</string>
-    <string name="file_already_exists_overwrite">\"%1$s\" dosyası zaten var. Üzerine yazılsın mı?</string>
-    <string name="folder_already_exists">Folder \"%1$s\" already exists</string>
+    <string name="file_already_exists">\"%s\" dosyası zaten var</string>
+    <string name="file_already_exists_overwrite">\"%s\" dosyası zaten var. Üzerine yazılsın mı?</string>
+    <string name="folder_already_exists">Folder \"%s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">Üzerine yaz</string>
     <string name="skip">Atla</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">Bizi takip edin</string>
     <string name="copyright">v %1$s\nTelif hakkı © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
-    <string name="app_version">App version: %1$s</string>
-    <string name="device_os">Device OS: %1$s</string>
+    <string name="app_version">App version: %s</string>
+    <string name="device_os">Device OS: %s</string>
     <string name="donate_please">
         <![CDATA[
             Merhaba,<br><br>
