--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">未知错误</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">文件 \"%1$s\" 已存在</string>
-    <string name="file_already_exists_overwrite">文件 \"%1$s\" 已存在。是否覆盖？</string>
-    <string name="folder_already_exists">文件夹 \"%1$s\" 已存在</string>
+    <string name="file_already_exists">文件 \"%s\" 已存在</string>
+    <string name="file_already_exists_overwrite">文件 \"%s\" 已存在。是否覆盖？</string>
+    <string name="folder_already_exists">文件夹 \"%s\" 已存在</string>
     <string name="merge">合并</string>
     <string name="overwrite">覆盖</string>
     <string name="skip">跳过</string>
@@ -331,8 +331,8 @@
     <string name="follow_us">关注我们</string>
     <string name="copyright">v %1$s Copyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">额外信息</string>
-    <string name="app_version">应用版本：%1$s</string>
-    <string name="device_os">设备系统：%1$s</string>
+    <string name="app_version">应用版本：%s</string>
+    <string name="device_os">设备系统：%s</string>
     <string name="donate_please">
         <![CDATA[
             你好，<br><br>
