--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -84,9 +84,9 @@
     <string name="unknown_error_occurred">發生未知的錯誤</string>
 
     <!-- File operation conflicts -->
-    <string name="file_already_exists">檔案 \"%1$s\" 已經存在</string>
-    <string name="file_already_exists_overwrite">檔案 \"%1$s\" 已經存在。 要覆蓋嗎?</string>
-    <string name="folder_already_exists">資料夾 \"%1$s\" 已經存在</string>
+    <string name="file_already_exists">檔案 \"%s\" 已經存在</string>
+    <string name="file_already_exists_overwrite">檔案 \"%s\" 已經存在。 要覆蓋嗎?</string>
+    <string name="folder_already_exists">資料夾 \"%s\" 已經存在</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
     <string name="append">添加到 \'_1\'</string>
@@ -101,8 +101,8 @@
     <string name="confirm_selection">確認選擇</string>
 
     <plurals name="items">
-        <item quantity="one">%1$d個項目</item>
-        <item quantity="other">%1$d個項目</item>
+        <item quantity="one">%d個項目</item>
+        <item quantity="other">%d個項目</item>
     </plurals>
 
     <!-- Storages -->
@@ -330,8 +330,8 @@
     <string name="follow_us">追蹤我們</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">進階資訊</string>
-    <string name="app_version">應用程式版本: %1$s</string>
-    <string name="device_os">裝置系統: %1$s</string>
+    <string name="app_version">應用程式版本: %s</string>
+    <string name="device_os">裝置系統: %s</string>
     <string name="donate_please">
         <![CDATA[
             哈囉 <br><br>
