--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -264,7 +264,7 @@
     <string name="password_protect_whole_app">用密碼保護整個應用程式</string>
     <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的「最後修改」數值</string>
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
-    <string name="prevent_phone_from_sleeping">防止手機睡眠</string>
+    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
     <string name="skip_delete_confirmation">永遠跳過刪除確認</string>
     <string name="enable_pull_to_refresh">啟用頂端下拉更新</string>
     <string name="use_24_hour_time_format">Use 24-hour time format</string>
