--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -265,7 +265,7 @@
     <string name="password_protect_whole_app">Passordbeskytt hele appen</string>
     <string name="keep_last_modified">Behold gammel Sist endret-verdi ved kopier/flytt/endre navn for filer</string>
     <string name="show_info_bubble">Vis en info-boble ved å dra i rullefeltet</string>
-    <string name="prevent_phone_from_sleeping">Forhindre at telefonen går i hvilemodus</string>
+    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
     <string name="skip_delete_confirmation">Hopp alltid over dialog for slettebekreftelse</string>
     <string name="enable_pull_to_refresh">Aktiver vertikal sveipebevegelse fra toppen for innholdsgjenoppfrisking</string>
     <string name="use_24_hour_time_format">Use 24-hour time format</string>
